--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,10 +6,10 @@
     
     <!-- Favicon - Multiple sizes for better browser/search engine support -->
     <link rel="icon" type="image/jpeg" href="/assets/favicon.jpeg" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/logo.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/assets/logo.png" />
+    <link rel="icon" type="image/jpeg" sizes="192x192" href="/assets/favicon.jpeg" />
+    <link rel="icon" type="image/jpeg" sizes="512x512" href="/assets/favicon.jpeg" />
     <link rel="shortcut icon" href="/assets/favicon.jpeg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.jpeg" />
     
     <!-- Primary Meta Tags -->
     <title>TruView - Authentic Reviews & Ratings Platform</title>
